2008-03-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7573: Page properties: Make author and author_email visible instantly, credits Steffen kamper
	* Added new descriptions for some page property fields, credits Uschi Renziehausen
	* Added feature #7140: EM should send TYPO3 version when connecting to TER, credits Niels Pardon
	* Fixed bug #7704: Image Position in Text/Image doesn't work, redits Steffen Kamper
	* Fixed bug #7713: EM - Translation Manager loose CSS while updating, credits Steffen Kamper
	* Reintroduced the save button in user settings, removed navigation mode option when not in backend_old
	* Added feature #7427: add docheader to file -> filelist module, credits Christoph Koehler

2008-03-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Added @var in class.tslib_eidtools.php

2008-03-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7725: buttons.left(right,center,justifyfull).useClass not honored by htmlArea RTE

2008-03-02  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7642: Page tree Filter use wrong div for collapse

2008-03-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #7397: improper handling of non-transparent reverse proxies
	* Added feature #7397: enable special handling of reverse SSL proxies
	* Fixed bug #1364: enable cURL in t3lib_div::getURL() for ftp, ftp,sftp and scp
	* Fixed bug #5985: PHP warning in t3lib_div::getURL() when safe_mode or open_basedir is set
	* Added feature #7624: add status/error repoting to t3lib_div::getURL()

2008-03-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7291: Taskcenter -> sys_action - viewport is too small when creating records (patch by Steffen Kamper)
	* Fixed bug #5788: Add a delete button to the yellow warning box for removing the ENABLE_INSTALL_TOOL_FILE