@@ -1,3 +1,7 @@
+2008-03-03  Michael Stucki  <michael@typo3.org>
+
+	* Fixed bug #7729: Login screen needs to be XCLASSable
+
 2008-03-03  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #7573: Page properties: Make author and author_email visible instantly, credits Steffen kamper
